# DarkSynth

./: CMakeLists.txt  LICENSE  build.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.cpp  SynthVoice.h  UnisonSynthesiser.h
